scenarios/argocd/fakenodes/eks/istio/gateways/gw-vcluster-eks.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vcluster-eks
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "vcluster-eks-121.172.27.0.3.nip.io"
    - "vcluster-eks-122.172.27.0.3.nip.io"
